@@ -34,7 +34,7 @@ public class Main{
 			
 			//3.NumberFormatException
 			/*String name="mosesh";
-			int n= Integer.parseInt(name);*/   
+			int n= Integer.parseInt(name); */
 			
 			
 			list.add("Rahul");
@@ -44,9 +44,15 @@ public class Main{
 			//4.ConcurrentModificationException
 			/*for(String name:list){
 				list.remove(name);
-				//System.out.println(name);
+				System.out.println(name);
 			}*/
-			
+			//int size = list.size();
+			//IndexOutOfBoundsException
+			/*for(int i=0;i<size;i++){
+				String name = list.get(i);
+				list.remove(name);
+				System.out.println(name);
+			}*/
 
 			//5.IllegalStateException
 			/*Iterator i = list.iterator();
@@ -65,6 +71,9 @@ public class Main{
 			/*Object name = "rahul";
 			Integer n = (Integer)name;*/
 			
+			/*String n = "67";
+			int n1 = (int)n;*/
+			
 			
 			//8.ArrayStoreException
 			/*Object[] arr = new Integer[5];
@@ -74,18 +83,29 @@ public class Main{
 			
 			
 			//9.UnsupportedOperationException
-			/*String name[] = {"rahul", "mosesh"};
-			List<String> list1 = Arrays.asList(name);
-			list1.add("Sakthi");
-			list1.remove("rahul");*/
+			/*String name[] = new String[3];
+			//List<String> list1 = Arrays.asList(name);
+			name[0]="laz";
+			name[1]="laz";
+			name[2]="laz";
+			List<String> list1 = List.of(name);
+			list1.add("ere");
+			name[1]="abc";
+			System.out.println(list1);
+			System.out.println(Arrays.toString(name));
+			//List<String> list1 = Arrays.asList(name);   //reference
+			//List<String> list1 = new ArrayList<>(Arrays.asList(name));
+			//List<String> list2 = new ArrayList<>(List.of(name));
+			//list1.add("Sakthi");
+			//list1.remove("rahul");*/
 			
 			
-			
+			Thread.sleep(-10);
 		}catch(Exception e){
 			//e.printStackTrace();
 			System.out.println(e);
 		}finally{
-			System.out.println(list);
+			//System.out.println(list);
 		}
 		
 	}
